Release 0.6 (dev)
=================
*


Release 0.5
===========
* fixes bugs for empty or null values in MultipleStrategyClassField
* dropped support for python3.3


Release 0.4
===========
* fixes bug wit DRF


Release 0.3 (07 May 2016)
=========================
* Django 1.10 support
* dropped support django 1.7
* do not need Registry


Release 0.2
===========
* Django 1.9 support


Release 0.1
===========
* initial release