@@ -1,0 +1,7 @@
+# -*- coding: utf-8 -*-
+from __future__ import absolute_import, unicode_literals
+
+import logging
+from django.utils.translation import gettext as _
+
+logger = logging.getLogger(__name__)
