@@ -3,6 +3,8 @@ import logging
 import six
 from inspect import isclass
 
+from django.utils.functional import cached_property
+
 from .utils import fqn, get_attr, import_by_name  # noqa
 
 logger = logging.getLogger(__name__)
@@ -12,8 +14,14 @@ class Registry(list):
     klass = None
 
     def __init__(self, *args):
-        self.klass = args[0]
+        self._klass = args[0]
         list.__init__(self, *args[1:])
+
+    @cached_property
+    def klass(self):
+        if isinstance(self._klass, six.string_types):
+            return import_by_name(self._klass)
+        return self._klass
 
     def is_valid(self, value):
         if value and isinstance(value, six.string_types):
@@ -21,7 +29,7 @@ class Registry(list):
 
         if self.klass:
             return (isclass(value) and issubclass(value, self.klass)) or \
-                (isinstance(value, self.klass))
+                   (isinstance(value, self.klass))
 
         return True
 
@@ -32,7 +40,7 @@ class Registry(list):
         # if isinstance(x, six.string_types):
         #     x = import_by_name(x)
 
-        if not issubclass(x, self.klass):
+        if self.klass and not issubclass(x, self.klass):
             raise ValueError("%s is not a subtype of %s" % (x, self.klass))
 
         if get_attr(x, 'Meta.abstract'):
