@@ -65,7 +65,13 @@ def import_by_name(name):
     module_path = ".".join(class_data[:-1])
     class_str = class_data[-1]
     module = importlib.import_module(module_path)
-    return getattr(module, class_str)
+    try:
+        return getattr(module, class_str)
+    except AttributeError as e:
+        raise AttributeError('Unable to import {}. '
+                             '{} does not have {} attribute'.format(name,
+                                                                    module,
+                                                                    class_str))
 
 
 def stringify(value):
